2011-01-25  Ernesto Baschny  <ernst@cron-it.de>

	* Merged Linkvalidator 1.0.0

2011-01-26  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #17321: Add missing PHPdoc
	* Fixed bug #17202: Cursor not changing to help over some labels
	* Fixed bug #17279: Old Contextmenu: Partly broken - Mount as TreeRoot / Hide / Unhide / Delete (Thanks to Stefan Galinski)

2011-01-26  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid to version 1.3.0

2011-01-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.1

2011-01-26  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.0rc3

2011-01-25  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17265: CSH in Flexforms broken when label indices contain more than one dot

2011-01-25  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #17320: Not installing extensions in Upgrade Wizard should also get rid of the wizard
	* Fixed issue #16712: Cleanup: centralize TYPO3 urls (Thanks to Steffen Kamper)
	* Fixed issue #16142: Records should not be indented if there is no parent record (Thanks to Georg Ringer)
	* Fixed issue #17316: Flag sprites was not updated after renaming canada.gif back to ca.gif and "multi-language" was missing
	* Fixed issue #17312: Pagetree - Provide a default contextmenu action to open custom urls (Thanks to Stefan Galinksi)
	* Re-added feature #17313: Since using new flags from sprites (#15668), the sys_language hasn't a flag-selector by icon (Thanks to Jo Hasenau)
	* Fixed bug #17305: Login/ Logout was not possible after introducing the locking in #17289 (Thanks to Helmut Hummel)

2011-01-25  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #17302: Admin Panel CSS is loaded in the Backend

2011-01-25  Steffen Kamper  <steffen@typo3.org>

	* Merge of extension manager for RC3
	* Fixed bug #17321: In new em, t3lib_tsstyleconfig adds another formtag