@@ -1,4 +1,8 @@
-2011-01-25  Ernesto Baschny  <ernst@cron-it.de>
+2011-01-26  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #17319: Incorrect/missing array entries in t3lib_cs regarding Galician and Georgian
+
+2011-01-26  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Merged Linkvalidator 1.0.0
 
